<resources>
    <string name="app_name">ChatApp</string>
    <string name="action_logout">Sign out</string>
    <string name="action_profile">Profile</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="hint_message">Type a Message</string>
    <string name="button_login">Login</string>
    <string name="button_signUp">Sign up</string>
    <string name="text_signup"><u>No account? Go to Sign up</u></string>
    <string name="text_login"><u>Already have an account?</u></string>
    <string name="button_apply">Apply changes</string>
    <string name="button_delete">Delete Profile</string>

    <style name="title_activity_main">MainActivity</style>

    <string name="hello_status_update_fragment">Hello from camera status update fragment</string>
    <string name="hello_chats_fragment">Hello from chats fragment</string>
    <string name="hello_status_fragment">Hello from status fragment</string>
    <string name="send_button_text">Button</string>
    <string name="test">Hi \n How are you \n What are you doing?</string>
    <string name="button_update_status">Update status</string>
    <string name="hint_status">Status</string>


</resources>