<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_3"
            android:layout_marginBottom="@dimen/grid_3"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:src="@drawable/default_user"
                android:paddingBottom="@dimen/grid_3"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTILP"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/photoIV"
                android:paddingBottom="@dimen/grid_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameETP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTILP"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTILP"
                android:paddingBottom="@dimen/grid_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneETP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTILP"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTILP"
                android:paddingBottom="@dimen/grid_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailETP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/emailTILP"
                android:layout_marginBottom="@dimen/grid_3"
                style="@style/StandardButton"
                android:text="@string/button_apply"
                android:onClick="onApply"/>

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/applyButton"
                android:layout_marginBottom="@dimen/grid_3"
                style="@style/StandardButton"
                android:text="@string/button_delete"
                android:onClick="onDelete"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>