<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                app:srcCompat="@drawable/title" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/buttonSignUp"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_4"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:backgroundTint="#00BCD4"
                android:onClick="onSignUp"
                android:text="@string/button_signUp" />

            <TextView
                android:id="@+id/loginTV"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/grid_4"
                android:layout_marginBottom="@dimen/grid_3"
                android:clickable="true"
                android:onClick="onLogin"
                android:text="@string/text_login" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>



    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>